# on_courses_backend

./: .env.example  .gitignore  README.md  dbdiagram.txt  deploy.sh  email_helper.py  helpers.py  postman_collection.json  pyproject.toml  validate.ps1
.github/workflows/: ci.yml
apps/: email_helper.py  helpers.py
apps/commercial/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/community/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/courses/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/gamification/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/progress/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
config/: error_views.py  pagination.py  settings.py  urls.py
courses/: __init__.py  admin.py  filters.py  permissions.py  urls.py
courses/migrations/: 0001_initial.py  0002_alter_examattempt_answers_and_more.py
courses/models/: __init__.py  anuncio.py  carrito.py  categoria.py  certificado.py  comentario_leccion.py  cupon.py  curso.py  examen.py  hilo_foro.py  inscripcion.py  intento.py  leccion.py  logro.py  modulo.py  orden.py  pregunta.py  progreso_leccion.py  publicacion_foro.py  recurso.py  resena.py  soporte.py  usuario.py
courses/serializers/: __init__.py  anuncio.py  carrito.py  categoria.py  certificado.py  (+17 more)
docs/: generate_er_diagram.py
(+55 files in other folders)
